# maps_server

./: Cargo.toml  Makefile  README.md  Rocket.toml  diesel.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: database.md
local_development/: docker-compose.yml
migrations/2022-03-20-183919_initialization/: up.sql
src/: main.rs  schema.rs  trace.rs  utils.rs
src/api/handlers/: collections.rs  error.rs  mod.rs  points.rs  support.rs
src/api/models/: mod.rs
src/db/: migrations.rs  mod.rs  schema.rs
src/db/migrations/2022-03-20-183919_initialization/: down.sql  up.sql
src/domain/: mod.rs
src/domain/collections/: controller.rs  error.rs  mod.rs  models.rs  repo.rs
src/domain/controllers/: collections.rs
src/domain/models/: collection.rs  mod.rs
src/domain/points/: error.rs  mod.rs  models.rs  repo.rs
src/handlers/: collections.rs  mod.rs  support.rs
src/models/: mod.rs
src/rocket_stuff/api/handlers/: collections.rs
src/rocket_stuff/db/migrations/2022-03-20-183919_initialization/: up.sql
src/rocket_stuff/domain/collections/: mod.rs  models.rs
