[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
uuid = { version = "1.2.1", features = ["serde", "v4"] }
thiserror = "1.0.37"
anyhow = "1.0.65"
axum = { version = "0.6.18", features = ["json"] }
tokio = { version = "1.28.2", features = ["full"] }
