[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
uuid = { version = "1.2.1", features = ["serde", "v7"] }
thiserror = "1.0.37"
anyhow = "1.0.65"
axum = { version = "0.6.18", features = ["json"] }
tokio = { version = "1.28.2", features = ["full"] }
diesel = { version = "2.1.0", features = ["postgres", "uuid"] }
diesel_migrations = { version = "2.1.0" }
deadpool-diesel = { version = "0.4.1", features = ["postgres"] }
dotenv = "0.15.0"
deadpool = "0.9.5"
async-trait = "0.1.68"
deadpool-sync = "0.1.0"
serde_json = "1.0.96"
axum-extra = "0.7.4"
